--- a/poesie.html
+++ b/poesie.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Essays</title>
+    <title>Poesie</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
