vertical bar for mobile visualization

--- a/essays.html
+++ b/essays.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="overlay-page">
-        <div><a href="index.html" class="page-name">Alberto Dall'Ora</a></div>
+        <div><a href="index.html" class="page-links">Alberto Dall'Ora</a></div>
         <a href="essays.html" class="page-selected-link">Essays</a>
         <a href="poesie.html" class="page-links">Poesie</a>
         <a href="bio.html" class="page-links">Bio</a>
