small refactoring of rotterdam

--- a/poesie/rotterdam.html
+++ b/poesie/rotterdam.html
@@ -34,7 +34,7 @@
         ora che il denaro gli gonfia le tasca.
         
         Così il frutto esotico sinora gustato
-        diviene parassita nel mercato di stato,
+        diventa parassita nel mercato di stato,
         colpevole unico dei reati commessi
         da un popolo affamato, da un branco di fessi.
 
@@ -61,7 +61,7 @@
         Rotterdam è un grosso animale in movimento,
         che pensa sempre sia giunto il suo momento,
         che trova solo nel rinnovato conflitto
-        il modo di migliorarsi, di non essere sconfitto.
+        il modo di migliorarsi, di non esser sconfitto.
         
 
     </div>
