--- a/poesie.html
+++ b/poesie.html
@@ -18,6 +18,7 @@
     <h2> Poesie </h2>
     <ul>
         <li><a href="poesie/rotterdam.html" class="essay-links">Rotterdam</a></li>
+        <li><a href="poesie/fermo_e_mosso.html" class="essay-links">Fermo e mosso</a></li>
     </ul>
 </body>
 </html>
