piccola modifica fermoemosso

--- a/poesie/fermo_e_mosso.html
+++ b/poesie/fermo_e_mosso.html
@@ -20,10 +20,10 @@
         Stanco, confuso e immobile,
         a giacca aperta, controvento,
         la nostalgia mi prende la gola,
-        mentre il sole scende lento.
+        mentre il sole si volta di spalle.
 
-        Ma gli alberi piegati indietro
-        non sembrano volermi abbandonare
+        Questi alberi piegati indietro
+        non sembrano però abbandonarmi,
         e tutta questa fragilità,
         è ora più semplice da sopportare.
     </div>
