aggiunta "In spalla"

--- a/poesie/in_spalla.html
+++ b/poesie/in_spalla.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rotterdam</title>
+    <title>In spalla</title>
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
@@ -15,12 +15,14 @@
     </div>
     <hr/>
     <br>
-    <h2>Rotterdam </h2>
+    <h2>In spalla</h2>
     <div class="poem">
-        Rotterdam è un grosso animale in movimento,
-        che pensa sempre sia giunto il suo momento,
-        che trova solo nel rinnovato conflitto
-        il modo di migliorarsi, di non esser sconfitto.
+        Una notte chiara,
+        con l'aria per la strada,
+        la paura m'ha lasciato il petto.
+
+        La porto in spalla come una pecora,
+        la canto al mondo come un padre.
     </div>
 </body>
 </html>
