--- a/poesie.html
+++ b/poesie.html
@@ -17,8 +17,9 @@
     <br>
     <h2> Poesie </h2>
     <ul>
-        <li><a href="poesie/rotterdam.html" class="essay-links">Rotterdam</a></li>
+        <li><a href="poesie/in_spalla.html" class="essay-links">In spalla</a></li>
         <li><a href="poesie/fermo_e_mosso.html" class="essay-links">Fermo e mosso</a></li>
+        <li><a href="poesie/rotterdam.html" class="essay-links">Rotterdam</a></li>
     </ul>
 </body>
 </html>
