--- a/poesie/fermo_e_mosso.html
+++ b/poesie/fermo_e_mosso.html
@@ -19,8 +19,8 @@
     <div class="poem">
         Stanco, confuso e immobile,
         a giacca aperta, controvento,
-        la nostalgia mi prende la gola,
-        mentre il sole si volta di spalle.
+        la nostalgia mi stringe la gola,
+        mentre il sole cala lento.
 
         Questi alberi piegati indietro
         non sembrano però abbandonarmi,
