--- a/poesie/rotterdam.html
+++ b/poesie/rotterdam.html
@@ -18,7 +18,7 @@
     <h2>Rotterdam </h2>
     <div class="poem">
         Rotterdam è un grosso animale in movimento,
-        che pensa sempre sia giunto il suo momento,
+        che crede sempre sia giunto il suo momento,
         che trova solo nel rinnovato conflitto
         il modo di migliorarsi, di non esser sconfitto.
     </div>
