cambiato tittolo e mnior refactor

--- a/poesie/in_spalla.html
+++ b/poesie/in_spalla.html
@@ -17,7 +17,7 @@
     <br>
     <h2>In spalla</h2>
     <div class="poem">
-        Una notte chiara,
+        Una notte d'estate,
         con l'aria per la strada,
         la paura m'ha lasciato il petto.
 
