--- a/poesie/mentire.html
+++ b/poesie/mentire.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mentire</title>
+    <title>Cambiarsi</title>
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
@@ -15,7 +15,7 @@
     </div>
     <hr/>
     <br>
-    <h2>Mentire</h2>
+    <h2>Cambiarsi</h2>
     <div class="poem">
         Che piacere, vincere col baro,
         mutare l'ansia in un riso,
