tolto fermo e mosso

--- a/poesie/fermo_e_mosso.html
+++ b/poesie/fermo_e_mosso.html
@@ -18,12 +18,12 @@
     <h2>Fermo e mosso </h2>
     <div class="poem">
         Stanco, confuso e immobile,
-        a giacca aperta, controvento,
+        con la giacca aperta, controvento,
         la nostalgia mi stringe la gola,
         mentre il sole cala lento.
 
-        Questi alberi piegati indietro
-        non sembrano però abbandonarmi,
+        Questi alberi piegati indietro,
+        però, non sembrano abbandonarmi,
         e tutta questa fragilità,
         è ora più semplice da sopportare.
     </div>
