cambiata bio e contatti

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="homepage-name">Alberto Dall'Ora</div>
             <a href="poesie.html" class="homepage-links">Poesie</a>
             <a href="bio.html" class="homepage-links">Bio</a>
-            <a href="contact.html" class="homepage-links">Contact</a>
+            <a href="contatti.html" class="homepage-links">Contatti</a>
         </div>
     </div>
 </body>
