--- a/essays.html
+++ b/essays.html
@@ -12,7 +12,7 @@
         <a href="essays.html" class="page-selected-link">Essays</a>
         <a href="poesie.html" class="page-links">Poesie</a>
         <a href="bio.html" class="page-links">Bio</a>
-        <a href="contact.html" class="page-links">Contact</a>
+        <a href="contatti.html" class="page-links">Contatti</a>
     </div>
     <hr/>
     <br>
