--- a/poesie/fermo_e_mosso.html
+++ b/poesie/fermo_e_mosso.html
@@ -11,7 +11,7 @@
         <div><a href="../index.html" class="page-links">Alberto Dall'Ora</a></div>
         <a href="../poesie.html" class="page-selected-link">Poesie</a>
         <a href="../bio.html" class="page-links">Bio</a>
-        <a href="../contact.html" class="page-links">Contact</a>
+        <a href="../contatti.html" class="page-links">Contatti</a>
     </div>
     <hr/>
     <br>
