aggiunto in fondo ai sentieri

--- a/poesie/casa.html
+++ b/poesie/casa.html
@@ -26,5 +26,9 @@
         La terra ricca e umile sotto i piedi,
         il cielo infinito sopra la testa.
     </div>
+    <br><br>
+    <div class="image-container">
+    <img src="../images/parco_resistenza_mossa.jpg" class="responsive-image" alt="parco_resistenza_mossa">
+    <div>
 </body>
 </html>
