--- a/poesie/casa.html
+++ b/poesie/casa.html
@@ -9,6 +9,7 @@
 <body>
     <div class="overlay-page">
         <div><a href="../index.html" class="page-links">Alberto Dall'Ora</a></div>
+        <a href="../racconti.html" class="page-links">Racconti</a>
         <a href="../poesie.html" class="page-selected-link">Poesie</a>
         <a href="../bio.html" class="page-links">Bio</a>
         <a href="../contatti.html" class="page-links">Contatti</a>
@@ -22,7 +23,7 @@
         Della memoria passata e futura
         si riempie il tepore che mi avvolge.
         Correndo libero, nella foschia di ottobre,
-        mi sono ricordato di cosa significhi sentirsi a casa:
+        mi sono ricordato di casa mia.
         La terra ricca e umile sotto i piedi,
         il cielo infinito sopra la testa.
     </div>
