--- a/racconti.html
+++ b/racconti.html
@@ -3,24 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contatti</title>
+    <title>Poesie</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <div class="overlay-page">
-        <div><a href="index.html" class="page-links">Alberto Dall'Ora</a></div>
-        <a href="../racconti.html" class="page-links">Racconti</a>
+        <div><a href="../index.html" class="page-links">Alberto Dall'Ora</a></div>
+        <a href="racconti.html" class="page-selected-link">Racconti</a>
         <a href="poesie.html" class="page-links">Poesie</a>
         <a href="bio.html" class="page-links">Bio</a>
-        <a href="contatti.html" class="page-selected-link">Contatti</a>
+        <a href="contatti.html" class="page-links">Contatti</a>
     </div>
     <hr/>
     <br>
-    <div class="content">
-    <h2> Contatti </h2>
-    <p>
-        e-mail: albertodallora01@gmail.com
-    </p>
-    </div>
+    <h2> Poesie </h2>
+    <ul></ul>
+        <li><a href="racconti/camminate_alpine.html" class="essay-links">Camminate alpine</a></li>
+    </ul>
 </body>
 </html>
