--- a/poesie/rotterdam.html
+++ b/poesie/rotterdam.html
@@ -9,6 +9,7 @@
 <body>
     <div class="overlay-page">
         <div><a href="../index.html" class="page-links">Alberto Dall'Ora</a></div>
+        <a href="../racconti.html" class="page-links">Racconti</a>
         <a href="../poesie.html" class="page-selected-link">Poesie</a>
         <a href="../bio.html" class="page-links">Bio</a>
         <a href="../contatti.html" class="page-links">Contatti</a>
