--- a/racconti/camminate_alpine.html
+++ b/racconti/camminate_alpine.html
@@ -26,7 +26,7 @@
     Scendendo il pendio di Bankastraat la città riprende forma e mi accoglie con grandi vetrate dove calde luci invernali illuminano arredamento di design. Sento la mia pelle rimettersi in allerta mentre tento di dare una conclusione alle considerazioni sparse nate camminando in quota. Ritorna il rombo delle auto mentre le vie sembrano meno vive di quando le ho lasciate una mezz’ora fa. Giro l’angolo e scorgo la strada di casa, dove un gruppo di studenti sta sghignazzando fuori dal solito bar che continua a ospitare musica live anche di martedì sera. Non potendo evitare di notare come in questo momento io non sia nella condizione di ridere senza pensieri come loro, risalgo la scala di casa con un po’ di amaro in bocca.
 
 Devo lottare per tornare chi ero, o accettare chi la vita mi ha fatto diventare?
-Preferire stare in quota piuttosto che sopra un jazz bar è legittimo o sintomo della mia fragilità?
+Preferire camminare in quota piuttosto che stare a bere in un jazz bar è sintomo della mia fragilità?
 Queste domande hanno un senso o sto guardando le cose dalla parte sbagliata?
 Un tempo sarei stato in grado di confrontarmi con sicurezza con questi dubbi. Ma ora sono solo, e gli alberi mossi dal vento notturno sono gli unici a darmi risposte.
 
