--- a/racconti.html
+++ b/racconti.html
@@ -16,7 +16,7 @@
     </div>
     <hr/>
     <br>
-    <h2> Poesie </h2>
+    <h2> Racconti </h2>
     <ul></ul>
         <li><a href="racconti/camminate_alpine.html" class="essay-links">Camminate alpine</a></li>
     </ul>
