--- a/poesie.html
+++ b/poesie.html
@@ -18,6 +18,7 @@
     <br>
     <h2> Poesie </h2>
     <ul></ul>
+        <li><a href="poesie/senza_dirsi_addio.html" class="essay-links">Senza dirsi addio</a></li>
         <li><a href="poesie/in_fondo_ai_sentieri.html" class="essay-links">In fondo ai sentieri</a></li>
         <li><a href="poesie/casa.html" class="essay-links">Casa</a></li>
         <li><a href="poesie/bugie.html" class="essay-links">Bugie</a></li>
