--- a/poesie/senza_dirsi_addio.html
+++ b/poesie/senza_dirsi_addio.html
@@ -27,7 +27,7 @@
         cercando il mio passato.
 
         Se n'è andato via, 
-        scordandosi di salutare.
+        dimenticandosi di salutare.
     </div>
 </body>
 </html>
