--- a/dischi.html
+++ b/dischi.html
@@ -3,23 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Poesie</title>
+    <title>Dischi</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <div class="overlay-page">
         <div><a href="../index.html" class="page-links">Alberto Dall'Ora</a></div>
-        <a href="racconti.html" class="page-selected-link">Racconti</a>
-        <a href="../dischi.html" class="page-links">Dischi</a>
+        <a href="racconti.html" class="page-links">Racconti</a>
+        <a href="../dischi.html" class="page-selected-link">Dischi</a>
         <a href="poesie.html" class="page-links">Poesie</a>
         <a href="bio.html" class="page-links">Bio</a>
         <a href="contatti.html" class="page-links">Contatti</a>
     </div>
     <hr/>
     <br>
-    <h2> Racconti </h2>
+    <h2> Dischi </h2>
     <ul></ul>
-        <li><a href="racconti/camminate_alpine.html" class="essay-links">Camminate alpine</a></li>
+        <li><a href="dischi/decollando.html" class="essay-links">Decollando</a></li>
     </ul>
 </body>
 </html>
