--- a/dischi/decollando.html
+++ b/dischi/decollando.html
@@ -19,10 +19,9 @@
     <br>
     <h2>Decollando</h2>
     <div class="racconto">
-Mettere il culo sopra 300 cavalli di bielle, valvole e pistoni. Accelerare, aumentare e spingere ancora. Chiduere gli occhi, sentire la vibrazione del motore nel petto, nelle gambe. Mollare il volante, alzarsi in aria come su una pista di decollo. Volare sulle case, le strade, gli alberi. Sentirsi una mano tra i capelli, la testa farsi leggera, sfrecciare tra le luci della notte. Essere ovunque e da nessuna parte. Spingere e dare ancora gas. Correre con la testa sospesa a mezz’aria. 
+Mettere il culo sopra 300 cavalli di bielle, valvole e pistoni. Accelerare, aumentare e spingere ancora. Chiudere gli occhi, sentire la vibrazione del motore nel petto, nelle gambe. Mollare il volante, prendere aria sotto le ali, e decollare. Volare sulle case, le strade, gli alberi. Una mano calda tra i capelli, la testa leggera inclinata all'indietro, le luci della notte che scorrono veloci. Essere ovunque e da nessuna parte. Spingere e dare ancora gas. Correre a mezz’aria sul mondo. 
 
-
-DJ G-Spot plasma X-Paradise come un maestro scultore. Toglie l’eccesso dal pezzo di Hole in One (Marcel Hol) ed evidenza gli aspetti piú consistenti, unendo il tutto con morbida maestria.  Dopo 33 anni viene ancora giú l’impianto.
+DJ G-Spot plasma X-Paradise come un maestro scultore. Toglie l’eccesso dal pezzo di Hole in One (Marcel Hol) ed alimenta gli aspetti piú solidi, unendo il tutto con morbida perizia.  Dopo 33 anni viene ancora giú l’impianto.
 
 
 <iframe 
