--- a/poesie.html
+++ b/poesie.html
@@ -19,7 +19,8 @@
     <br>
     <h2> Poesie </h2>
     <ul></ul>
-        <li><a href="poesie/immunità.html" class="essay-links">Immunità</a></li>
+        <li><a href="poesie/luci.html" class="essay-links">Luci</a></li>
+        <li><a href="poesie/visioni.html" class="essay-links">Visioni</a></li>
         <li><a href="poesie/scorrimento_lento.html" class="essay-links">Scorrimento lento</a></li>
         <li><a href="poesie/solo_ciccia.html" class="essay-links">Solo ciccia</a></li>
         <li><a href="poesie/senza_dirsi_addio.html" class="essay-links">Senza dirsi addio</a></li>
