--- a/poesie/visioni.html
+++ b/poesie/visioni.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Immunità</title>
+    <title>Visioni</title>
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
@@ -17,7 +17,7 @@
     </div>
     <hr/>
     <br>
-    <h2>Immunità</h2>
+    <h2>Visioni</h2>
     <div class="poem">
     Fili d’erba piegati dal vento,
     la grazia con cui ogni granello 
@@ -41,7 +41,7 @@
     Mi unirò al coro,
     di suoni e visioni,
     che chi passerà di qui
-    sentirà sulla pelle.
+    sentirà sulla sua pelle.
 
     </div>
 
