--- a/dischi.html
+++ b/dischi.html
@@ -19,7 +19,8 @@
     <br>
     <h2> Dischi </h2>
     <ul></ul>
-        <li><a href="poesie/immunità.html" class="essay-links">Immunità</a></li>
+        <li><a href="poesie/luci.html" class="essay-links">Luci</a></li>
+        <li><a href="poesie/visioni.html" class="essay-links">Visioni</a></li>
         <li><a href="dischi/decollando.html" class="essay-links">Decollando</a></li>
     </ul>
 </body>
